--- a/project/Cakekulture/index.html
+++ b/project/Cakekulture/index.html
@@ -1,28 +1,31 @@
-<!DOCTYPE html><html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cakekulture | Custom Cakes Bedford</title>
-  <meta name="description" content="Discover Cakekulture Bedford's premier home bakery for luxury custom cakes that taste divine and look stunning. Celebrate life's sweetest moments with a cake made just for you. Order via WhatsApp today!">
+  <meta name="description" content="Cakekulture is Bedford’s luxury home bakery crafting elegant, custom cakes that captivate the eye and delight the taste buds. Each cake is made fresh to order with love and artistry. DM or WhatsApp to order your edible masterpiece today!">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-  .gallery img {
-    transition: opacity 0.6s ease-in-out, transform 0.6s ease-in-out;
-    opacity: 0;
-  }
-
-  .gallery img.loaded {
-    opacity: 1;
-  }
+    .gallery img {
+      transition: opacity 0.6s ease-in-out, transform 0.6s ease-in-out;
+      opacity: 0;
+    }
+    .gallery img.loaded {
+      opacity: 1;
+    }
     html {
       scroll-behavior: smooth;
     }
     body {
       font-family: 'Open Sans', sans-serif;
+      background-color: #000;
+      color: #f0f0f0;
     }
     h1, h2, h3 {
       font-family: 'Playfair Display', serif;
+      background: linear-gradient(to right, #FBB034, #FFDD00);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
     .fade-in {
       opacity: 0;
@@ -50,101 +53,109 @@
     }
   </style>
 </head>
-<body class="bg-yellow-50 text-gray-800">
+<body>
   <!-- Hero Section -->
-  <section class="h-screen bg-cover bg-center flex flex-col justify-center items-center text-center px-4" style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://picsum.photos/seed/cakekulture/1200/800');">
-    <h1 class="text-4xl md:text-6xl text-white drop-shadow-lg mb-4">Cakes Made to Impress Moments Made to Remember</h1>
-    <p class="text-lg md:text-2xl text-white drop-shadow-md mb-8">Crafted in Bedford with love, artistry, and flavors that leave a lasting memory.</p>
-    <a href="#contact" class="bg-yellow-200 hover:bg-yellow-300 text-gray-800 font-semibold py-3 px-6 rounded-full shadow-lg transition transform hover:scale-105 animate-bounce">Order Your Cake</a>
-  </section>  <!-- About Section -->  <section class="py-16 px-6 text-center bg-white">
+  <section class="h-screen bg-black flex flex-col justify-center items-center text-center px-4">
+    <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/logo.png" alt="Cakekulture Logo" class="w-32 mb-6">
+    <h1 class="text-4xl md:text-6xl mb-4">Cakes Made to Impress<br>Moments Made to Remember</h1>
+    <p class="text-lg md:text-2xl text-gray-300 mb-8">Crafted in Bedford with love, artistry, and flavors that leave a lasting memory.</p>
+    <a href="#contact" class="bg-gradient-to-r from-yellow-400 to-orange-400 hover:from-orange-500 hover:to-yellow-500 text-black font-semibold py-3 px-6 rounded-full shadow-lg transition transform hover:scale-105">Order Your Cake</a>
+  </section>
+  <!-- About Section -->
+  <section class="py-16 px-6 text-center bg-[#111]">
     <div class="max-w-3xl mx-auto fade-in">
-      <h2 class="text-3xl text-yellow-800 mb-4">Welcome to Cakekulture</h2>
-      <p class="mb-4">Cakekulture is more than a bakery it's where dreams turn into edible art. Based in Bedford, we create custom cakes for birthdays, weddings, and life's special moments. Our passion is creating unforgettable experiences through cakes that wow visually and taste incredible.</p>
-      <p class="mb-4 font-semibold text-yellow-700">Pre-order only | DM or WhatsApp to order</p>
-      <p class="italic">"Every cake tells a story let's make yours unforgettable."</p>
+      <h2 class="text-3xl mb-4">Welcome to Cakekulture</h2>
+      <p class="mb-4">Cakekulture is more than a bakery — it's where dreams turn into edible art. Based in Bedford, we create custom cakes for birthdays, weddings, and life's special moments. Our passion is creating unforgettable experiences through cakes that wow visually and taste incredible.</p>
+      <p class="mb-4 font-semibold text-yellow-400">Pre-order only | DM or WhatsApp to order</p>
+      <p class="italic">"Every cake tells a story — let's make yours unforgettable."</p>
     </div>
-  </section>  <!-- Story Section -->  <section class="py-16 px-6 bg-yellow-100 text-center">
-    <h2 class="text-3xl text-yellow-800 mb-6">Meet Adenike Your Baker</h2>
+  </section>
+  <!-- Story Section -->
+  <section class="py-16 px-6 bg-black text-center">
+    <h2 class="text-3xl mb-6">Meet Adenike — Your Baker</h2>
     <div class="max-w-3xl mx-auto fade-in">
-      <p class="mb-4">Hi, I'm Adenike, founder of Cakekulture. My journey began with a love for baking and a passion for celebrating people. Every cake I create is personal made with care, creativity, and the desire to make your occasion shine. When you order from Cakekulture, you're not just buying a cake; you're investing in a beautiful memory.</p>
-      <p class="italic">"I bake with purpose to spread joy, love, and a taste of celebration."</p>
+      <p class="mb-4">Hi, I'm Adenike, founder of Cakekulture. My journey began with a love for baking and a passion for celebrating people. Every cake I create is personal — made with care, creativity, and the desire to make your occasion shine. When you order from Cakekulture, you're not just buying a cake; you're investing in a beautiful memory.</p>
+      <p class="italic">"I bake with purpose — to spread joy, love, and a taste of celebration."</p>
     </div>
-  </section>  
-  </section>  <!-- Gallery Section -->  <section class="py-16 bg-white text-center">  
-    <h2 class="text-3xl text-yellow-800 mb-10">Our Cake Creations</h2>  
-    <div class="flex flex-wrap justify-center gap-6">  
-      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0015.jpg" alt="Cake 1" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />  
-      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0016.jpg" alt="Cake 2" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />  
-      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0020.jpg" alt="Cake 3" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />  
-      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0019.jpg" alt="Cake 4" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />  
+  </section>
+  <!-- Gallery Section -->
+  <section class="py-16 bg-[#111] text-center gallery">
+    <h2 class="text-3xl mb-10">Our Cake Creations</h2>
+    <div class="flex flex-wrap justify-center gap-6">
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0015.jpg" alt="Cake 1" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0016.jpg" alt="Cake 2" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0020.jpg" alt="Cake 3" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0019.jpg" alt="Cake 4" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />
     </div>
-  
-  </section>  <!-- Testimonials Section -->  <section class="py-16 px-6 bg-yellow-100 text-center">
-    <h2 class="text-3xl text-yellow-800 mb-10">What Our Clients Say</h2>
+  </section>
+  <!-- Testimonials Section -->
+  <section class="py-16 px-6 bg-black text-center">
+    <h2 class="text-3xl mb-10">What Our Clients Say</h2>
     <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
-      <div class="bg-white p-6 rounded-lg shadow fade-in">
-        <p class="italic">⭐ ⭐ ⭐ ⭐ ⭐ “Adenike created the most beautiful cake for my baby shower it tasted divine and was the centerpiece of our day!”</p>
+      <div class="bg-[#111] p-6 rounded-lg shadow fade-in">
+        <p class="italic">⭐ ⭐ ⭐ ⭐ ⭐ “Adenike created the most beautiful cake for my baby shower — it tasted divine and was the centerpiece of our day!”</p>
         <p class="mt-4 font-semibold">— Emily R.</p>
       </div>
-      <div class="bg-white p-6 rounded-lg shadow fade-in">
-        <p class="italic">⭐ ⭐ ⭐ ⭐ ⭐“Cakekulture never disappoints. Every order feels special, like she knows exactly what you need.”</p>
+      <div class="bg-[#111] p-6 rounded-lg shadow fade-in">
+        <p class="italic">⭐ ⭐ ⭐ ⭐ ⭐ “Cakekulture never disappoints. Every order feels special, like she knows exactly what you need.”</p>
         <p class="mt-4 font-semibold">— Mark T.</p>
       </div>
     </div>
-  </section>  <!-- Why Choose Cakekulture -->  <section class="py-16 px-6 bg-white text-center">
-    <h2 class="text-3xl text-yellow-800 mb-6">Why People Love Cakekulture</h2>
+  </section>
+  <!-- Why Choose Cakekulture -->
+  <section class="py-16 px-6 bg-[#111] text-center">
+    <h2 class="text-3xl mb-6">Why People Love Cakekulture</h2>
     <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-6">
       <div class="p-4 fade-in">
         <h3 class="text-xl font-semibold mb-2">🌟 Stunning Designs</h3>
-        <p>Cakes that make a statement tailored to your event and style.</p>
+        <p>Cakes that make a statement — tailored to your event and style.</p>
       </div>
       <div class="p-4 fade-in">
         <h3 class="text-xl font-semibold mb-2">🍰 Divine Taste</h3>
-        <p>Flavors you'll remember crafted with premium ingredients.</p>
+        <p>Flavors you'll remember — crafted with premium ingredients.</p>
       </div>
       <div class="p-4 fade-in">
         <h3 class="text-xl font-semibold mb-2">💬 Personal Touch</h3>
-        <p>From your first message to the final bite a seamless, personal experience.</p>
+        <p>From your first message to the final bite — a seamless, personal experience.</p>
       </div>
     </div>
-  </section>  <!-- Contact Section -->  <section id="contact" class="py-16 bg-yellow-100 text-center px-6">
-    <h2 class="text-3xl text-yellow-800 mb-6">Let's Create Something Sweet</h2>
-    <div class="max-w-xl mx-auto bg-white p-8 rounded-lg shadow-md fade-in">
+  </section>
+  <!-- Contact Section -->
+  <section id="contact" class="py-16 bg-black text-center px-6">
+    <h2 class="text-3xl mb-6">Let's Create Something Sweet</h2>
+    <div class="max-w-xl mx-auto bg-[#111] p-8 rounded-lg shadow-md fade-in">
       <p class="mb-4 text-lg">Ready to order your custom cake? Let's talk details and make your vision a reality.</p>
-      <a href="https://wa.me/447466465349" class="bg-yellow-200 hover:bg-yellow-300 text-gray-800 font-semibold py-3 px-6 rounded-full shadow transition transform hover:scale-105" target="_blank">Message Adenike on WhatsApp</a>
+      <a href="https://wa.me/447466465349" class="bg-gradient-to-r from-yellow-400 to-orange-400 hover:from-orange-500 hover:to-yellow-500 text-black font-semibold py-3 px-6 rounded-full shadow transition transform hover:scale-105" target="_blank">Message Adenike on WhatsApp</a>
     </div>
     <p class="mt-6">📍Based in Bedford | Pre-order only</p>
-  </section>  <!-- WhatsApp Button -->  <a href="https://wa.me/447466465349" class="whatsapp-button" aria-label="Chat on WhatsApp">
+  </section>
+  <!-- WhatsApp Button -->
+  <a href="https://wa.me/447466465349" class="whatsapp-button" aria-label="Chat on WhatsApp">
     <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" width="24" height="24">
-      <path d="M20.52 3.48A11.9 11.9 0 0012.07.01C5.65.01.52 5.13.52 11.56a11.6 11.6 0 001.58 5.96L.06 24l6.68-2.11a11.82 11.82 0 005.32 1.35h.01c6.42 0 11.56-5.13 11.56-11.55a11.52 11.52 0 00-3.11-7.6zm-8.45 17.9a9.5 9.5 0 01-4.83-1.32l-.35-.2-3.96 1.25 1.29-3.86-.22-.37a9.46 9.46 0 01-1.45-5.07c0-5.26 4.28-9.55 9.55-9.55 2.56 0 4.97 1 6.78 2.82a9.52 9.52 0 012.8 6.74c0 5.27-4.29 9.56-9.56 9.56zm5.28-7.17c-.29-.14-1.72-.85-1.98-.94s-.46-.14-.65.14-.75.94-.93 1.14-.34.21-.63.07a7.79 7.79 0 01-2.29-1.41 8.63 8.63 0 01-1.59-2c-.17-.29 0-.45.13-.59.13-.13.29-.34.43-.51.14-.17.19-.29.29-.48.1-.19.05-.36-.02-.51-.08-.14-.65-1.56-.9-2.14-.24-.57-.49-.5-.65-.51h-.56c-.2 0-.52.07-.8.36s-1.05 1.03-1.05 2.52 1.07 2.93 1.22 3.14c.14.19 2.11 3.2 5.1 4.49.71.31 1.27.49 1.7.62.71.23 1.35.2 1.86.12.57-.08 1.72-.7 1.96-1.38.24-.68.24-1.26.17-1.38-.06-.12-.26-.19-.54-.33z" />
+      <path d="..."/>
     </svg>
-  </a>  <!-- Footer -->  <footer class="py-6 bg-white text-center text-sm text-gray-600">
-    <p>&copy; 2025 Cakekulture. All rights reserved. Website by <a href="https://freelankarx.com" class="text-yellow-700 font-semibold hover:underline">Freelankarx</a>.</p>
-  </footer>  <script>
+  </a>
+  <!-- Footer -->
+  <footer class="py-6 bg-black text-center text-sm text-gray-400">
+    <p>&copy; 2025 Cakekulture. All rights reserved. Website by <a href="https://freelankarx.com" class="text-yellow-400 font-semibold hover:underline">Freelankarx</a>.</p>
+  </footer>
+  <script>
     const faders = document.querySelectorAll('.fade-in');
-    const appearOptions = {
-      threshold: 0.1,
-      rootMargin: "0px 0px -50px 0px"
-    };
-
-    const appearOnScroll = new IntersectionObserver(function (entries, observer) {
+    const appearOptions = { threshold: 0.1, rootMargin: "0px 0px -50px 0px" };
+    const appearOnScroll = new IntersectionObserver(function(entries, observer) {
       entries.forEach(entry => {
         if (!entry.isIntersecting) return;
         entry.target.classList.add('visible');
         observer.unobserve(entry.target);
       });
     }, appearOptions);
-
-    faders.forEach(fader => {
-      appearOnScroll.observe(fader);
+    faders.forEach(fader => { appearOnScroll.observe(fader); });
+    document.addEventListener('DOMContentLoaded', () => {
+      const imgs = document.querySelectorAll('.gallery img');
+      imgs.forEach(img => {
+        img.onload = () => { img.classList.add('loaded'); };
+      });
     });
-  document.addEventListener('DOMContentLoaded', () => {
-    const imgs = document.querySelectorAll('.gallery img');
-    imgs.forEach(img => {
-      img.onload = () => {
-        img.classList.add('loaded');
-      };
-    });
-  });
-  </script></body>
+  </script>
+</body>
 </html>
