--- a/project/Cakekulture/index.html
+++ b/project/Cakekulture/index.html
@@ -65,17 +65,17 @@
   <section class="py-16 px-6 text-center bg-[#111]">
     <div class="max-w-3xl mx-auto fade-in">
       <h2 class="text-3xl mb-4">Welcome to Cakekulture</h2>
-      <p class="mb-4">Cakekulture is more than a bakery — it's where dreams turn into edible art. Based in Bedford, we create custom cakes for birthdays, weddings, and life's special moments. Our passion is creating unforgettable experiences through cakes that wow visually and taste incredible.</p>
+      <p class="mb-4">Cakekulture is more than a bakery it's where dreams turn into edible art. Based in Bedford, we create custom cakes for birthdays, weddings, and life's special moments. Our passion is creating unforgettable experiences through cakes that wow visually and taste incredible.</p>
       <p class="mb-4 font-semibold text-yellow-400">Pre-order only | DM or WhatsApp to order</p>
-      <p class="italic">"Every cake tells a story — let's make yours unforgettable."</p>
+      <p class="italic">"Every cake tells a story let's make yours unforgettable."</p>
     </div>
   </section>
   <!-- Story Section -->
   <section class="py-16 px-6 bg-black text-center">
-    <h2 class="text-3xl mb-6">Meet Adenike — Your Baker</h2>
+    <h2 class="text-3xl mb-6">Meet Adenike Your Baker</h2>
     <div class="max-w-3xl mx-auto fade-in">
-      <p class="mb-4">Hi, I'm Adenike, founder of Cakekulture. My journey began with a love for baking and a passion for celebrating people. Every cake I create is personal — made with care, creativity, and the desire to make your occasion shine. When you order from Cakekulture, you're not just buying a cake; you're investing in a beautiful memory.</p>
-      <p class="italic">"I bake with purpose — to spread joy, love, and a taste of celebration."</p>
+      <p class="mb-4">Hi, I'm Adenike, founder of Cakekulture. My journey began with a love for baking and a passion for celebrating people. Every cake I create is personal made with care, creativity, and the desire to make your occasion shine. When you order from Cakekulture, you're not just buying a cake; you're investing in a beautiful memory.</p>
+      <p class="italic">"I bake with purpose to spread joy, love, and a taste of celebration."</p>
     </div>
   </section>
   <!-- Gallery Section -->
@@ -93,7 +93,7 @@
     <h2 class="text-3xl mb-10">What Our Clients Say</h2>
     <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
       <div class="bg-[#111] p-6 rounded-lg shadow fade-in">
-        <p class="italic">⭐ ⭐ ⭐ ⭐ ⭐ “Adenike created the most beautiful cake for my baby shower — it tasted divine and was the centerpiece of our day!”</p>
+        <p class="italic">⭐ ⭐ ⭐ ⭐ ⭐ “Adenike created the most beautiful cake for my baby shower it tasted divine and was the centerpiece of our day!”</p>
         <p class="mt-4 font-semibold">— Emily R.</p>
       </div>
       <div class="bg-[#111] p-6 rounded-lg shadow fade-in">
@@ -108,15 +108,15 @@
     <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-6">
       <div class="p-4 fade-in">
         <h3 class="text-xl font-semibold mb-2">🌟 Stunning Designs</h3>
-        <p>Cakes that make a statement — tailored to your event and style.</p>
+        <p>Cakes that make a statement tailored to your event and style.</p>
       </div>
       <div class="p-4 fade-in">
         <h3 class="text-xl font-semibold mb-2">🍰 Divine Taste</h3>
-        <p>Flavors you'll remember — crafted with premium ingredients.</p>
+        <p>Flavors you'll remember crafted with premium ingredients.</p>
       </div>
       <div class="p-4 fade-in">
         <h3 class="text-xl font-semibold mb-2">💬 Personal Touch</h3>
-        <p>From your first message to the final bite — a seamless, personal experience.</p>
+        <p>From your first message to the final bite a seamless, personal experience.</p>
       </div>
     </div>
   </section>
