--- a/project/Cakekulture/index.html
+++ b/project/Cakekulture/index.html
@@ -54,13 +54,23 @@
   </style>
 </head>
 <body>
-  <!-- Hero Section -->
-  <section class="h-screen bg-black flex flex-col justify-center items-center text-center px-4">
-    <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/logo.png" alt="Cakekulture Logo" class="w-32 mb-6">
-    <h1 class="text-4xl md:text-6xl mb-4">Cakes Made to Impress<br>Moments Made to Remember</h1>
-    <p class="text-lg md:text-2xl text-gray-300 mb-8">Crafted in Bedford with love, artistry, and flavors that leave a lasting memory.</p>
-    <a href="#contact" class="bg-gradient-to-r from-yellow-400 to-orange-400 hover:from-orange-500 hover:to-yellow-500 text-black font-semibold py-3 px-6 rounded-full shadow-lg transition transform hover:scale-105">Order Your Cake</a>
-  </section>
+  <!-- Header with Logo -->
+<header class="bg-black shadow-md fixed top-0 left-0 w-full z-50">
+  <div class="max-w-7xl mx-auto px-4 py-3 flex items-center justify-between">
+    <!-- Logo with Text -->
+    <div class="flex items-center space-x-3">
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/logo.png" alt="Cakekulture Logo" class="h-10 w-auto">
+      <span class="text-xl font-bold text-yellow-400 tracking-wide">Cakekulture</span>
+    </div>
+  </div>
+</header>
+
+<!-- Hero Section -->
+<section class="h-screen bg-black flex flex-col justify-center items-center text-center px-4 mt-16">
+  <h1 class="text-4xl md:text-6xl mb-4 text-yellow-400">Cakes Made to Impress<br>Moments Made to Remember</h1>
+  <p class="text-lg md:text-2xl text-gray-300 mb-8">Crafted in Bedford with love, artistry, and flavors that leave a lasting memory.</p>
+  <a href="#contact" class="bg-gradient-to-r from-yellow-400 to-orange-400 hover:from-orange-500 hover:to-yellow-500 text-black font-semibold py-3 px-6 rounded-full shadow-lg transition transform hover:scale-105">Order Your Cake</a>
+</section>
   <!-- About Section -->
   <section class="py-16 px-6 text-center bg-[#111]">
     <div class="max-w-3xl mx-auto fade-in">
