--- a/project/influencerjoy/index.html
+++ b/project/influencerjoy/index.html
@@ -91,7 +91,7 @@
   <p class="mb-4">Have questions or want to collaborate? We'd love to hear from you!</p>
   <a href="mailto:hello@influencerjoy.com" class="bg-pink-200 hover:bg-pink-300 text-gray-800 font-semibold py-3 px-6 rounded-full shadow transition transform hover:scale-105">Email Us</a>
 </section><!-- Footer --><footer class="py-6 bg-pink-50 text-center text-sm text-gray-600">
-  <p>&copy; 2025 Influencer Joy. All rights reserved.</p>
+  <p>&copy; 2025 Influencer Joy. All rights reserved. Website by <a href="https://freelankarx.com" class="text-yellow-400 font-semibold hover:underline">Freelankarx</a>.</p>
 </footer><script>
   const faders = document.querySelectorAll('.fade-in');
   const appearOptions = { threshold: 0.1, rootMargin: "0px 0px -50px 0px" };
