--- a/project/influencerjoy/index.html
+++ b/project/influencerjoy/index.html
@@ -84,7 +84,7 @@
     </div>
   </div>
 </section><!-- CTA Banner --><section class="bg-pink-200 text-center py-8 px-6">
-  <h2 class="text-2xl text-pink-800 font-semibold">Glow With Confidence — Start Your Creator Journey Today!</h2>
+  <h2 class="text-2xl text-pink-800 font-semibold">Glow With Confidence Start Your Creator Journey Today!</h2>
   <a href="https://facebook.com/madeformastery" target="_blank" class="mt-4 inline-block bg-white text-pink-700 font-semibold py-2 px-4 rounded shadow hover:bg-pink-100 transition">Join Our Free Community</a>
 </section><!-- Contact Section --><section class="py-16 bg-white text-center px-6">
   <h2 class="text-3xl text-pink-700 mb-6">Get In Touch</h2>
