--- a/project/influencerjoy/index.html
+++ b/project/influencerjoy/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Influencer Joy | Influence with Purpose and Joy</title>
-  <meta name="description" content="Empower your influence journey with Influencer Joy – digital courses, Canva templates, and resources for aspiring content creators. Glow with confidence and monetize your creativity today!">
+  <meta name="description" content="Empower your influence journey with Influencer Joy digital courses, Canva templates, and resources for aspiring content creators. Glow with confidence and monetize your creativity today!">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -37,7 +37,7 @@
   <div class="max-w-3xl mx-auto fade-in">
     <h2 class="text-3xl text-pink-700 mb-4">Welcome to Influencer Joy</h2>
     <p class="mb-4">We are a digital creator platform for aspiring influencers and creative entrepreneurs. Through stylish branding, courses, and tools, we help you grow your brand, build confidence, and monetize your creativity.</p>
-    <p class="italic">"Fearless, Fresh & Fabulous — that’s how we roll."</p>
+    <p class="italic">"Fearless, Fresh & Fabulous  that’s how we roll."</p>
   </div>
 </section><!-- What We Offer --><section class="py-16 bg-pink-50 text-center">
   <h2 class="text-3xl text-pink-700 mb-10">Explore Our Resources</h2>
