--- a/project/influencerjoy/index.html
+++ b/project/influencerjoy/index.html
@@ -75,11 +75,11 @@
   <h2 class="text-3xl text-pink-700 mb-10">Success Stories</h2>
   <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
     <div class="bg-white p-6 rounded-lg shadow fade-in">
-      <p class="italic">“Thanks to Influencer Joy, I launched my first digital product and made $500 in my first month. The templates made everything so easy!”</p>
+      <p class="italic">⭐⭐⭐⭐⭐“Thanks to Influencer Joy, I launched my first digital product and made $500 in my first month. The templates made everything so easy!”</p>
       <p class="mt-4 font-semibold">— Bella K.</p>
     </div>
     <div class="bg-white p-6 rounded-lg shadow fade-in">
-      <p class="italic">“The community is so encouraging and the Canva designs are stunning! I finally feel confident posting online.”</p>
+      <p class="italic">⭐⭐⭐⭐⭐“The community is so encouraging and the Canva designs are stunning! I finally feel confident posting online.”</p>
       <p class="mt-4 font-semibold">— Janelle A.</p>
     </div>
   </div>
