--- a/project/influencerjoy/index.html
+++ b/project/influencerjoy/index.html
@@ -32,7 +32,7 @@
 <body class="text-gray-800"><!-- Hero Section --><section class="h-screen flex flex-col justify-center items-center text-center px-4 sparkle-bg relative overflow-hidden">
   <h1 class="text-4xl md:text-6xl text-pink-600 mb-4">Influence with Purpose and Joy</h1>
   <p class="text-lg md:text-2xl text-pink-800 mb-8">Empowering creative women to glow with confidence & monetize their passion online.</p>
-  <a href="https://facebook.com/madeformastery" target="_blank" class="bg-pink-200 hover:bg-pink-300 text-gray-800 font-semibold py-3 px-6 rounded-full shadow-lg transition transform hover:scale-105">Join Our Free Community</a>
+  <a href="facebook.com/groups/madeformastery" target="_blank" class="bg-pink-200 hover:bg-pink-300 text-gray-800 font-semibold py-3 px-6 rounded-full shadow-lg transition transform hover:scale-105">Join Our Free Community</a>
 </section><!-- About Section --><section class="py-16 px-6 text-center bg-white">
   <div class="max-w-3xl mx-auto fade-in">
     <h2 class="text-3xl text-pink-700 mb-4">Welcome to Influencer Joy</h2>
