--- a/project/influencerjoy/index.html
+++ b/project/influencerjoy/index.html
@@ -33,16 +33,17 @@
   <h1 class="text-4xl md:text-6xl text-pink-600 mb-4">Influence with Purpose and Joy</h1>
   <p class="text-lg md:text-2xl text-pink-800 mb-8">Empowering creative women to glow with confidence & monetize their passion online.</p>
   <a href="facebook.com/groups/madeformastery" target="_blank" class="bg-pink-200 hover:bg-pink-300 text-gray-800 font-semibold py-3 px-6 rounded-full shadow-lg transition transform hover:scale-105">Join Our Free Community</a>
+</section>
 <!-- Meet the Creator Section -->
 <section class="py-16 px-6 bg-pink-50 text-center">
   <h2 class="text-3xl text-pink-700 mb-6">Meet the Creator</h2>
   <div class="max-w-2xl mx-auto fade-in">
     <img src="IMAGE_LINK_HERE" alt="Creator Photo" class="w-40 h-40 mx-auto rounded-full shadow-lg mb-4 object-cover">
-    <p class="mb-4">Hi! I’m the heart behind <span class="font-semibold text-pink-700">Influencer Joy</span> — a digital creator on a mission to help women shine online with purpose and confidence. I love making creativity simple, fun, and profitable for everyone ready to take that leap. 💫</p>
+    <p class="mb-4">Hi! I’m the heart behind <span class="font-semibold text-pink-700">Influencer Joy</span> a digital creator on a mission to help women shine online with purpose and confidence. I love making creativity simple, fun, and profitable for everyone ready to take that leap. 💫</p>
     <p class="italic text-pink-600">"Let’s glow, grow, and influence with joy!"</p>
   </div>
 </section>
-</section><!-- About Section --><section class="py-16 px-6 text-center bg-white">
+<!-- About Section --><section class="py-16 px-6 text-center bg-white">
   <div class="max-w-3xl mx-auto fade-in">
     <h2 class="text-3xl text-pink-700 mb-4">Welcome to Influencer Joy</h2>
     <p class="mb-4">We are a digital creator platform for aspiring influencers and creative entrepreneurs. Through stylish branding, courses, and tools, we help you grow your brand, build confidence, and monetize your creativity.</p>
