--- a/project/influencerjoy/index.html
+++ b/project/influencerjoy/index.html
@@ -46,7 +46,7 @@
 <section class="py-16 px-6 bg-pink-50 text-center">
   <h2 class="text-3xl text-pink-700 mb-6">Meet the Creator</h2>
   <div class="max-w-2xl mx-auto fade-in">
-    <img src="IMAGE_LINK_HERE" alt="Creator Photo" class="w-40 h-40 mx-auto rounded-full shadow-lg mb-4 object-cover">
+    <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/influencerjoy/Messenger_creation_D3897DE3-9534-4F92-9BD6-04F74E59B14A.jpeg" alt="Creator Photo" class="w-40 h-40 mx-auto rounded-full shadow-lg mb-4 object-cover">
     <p class="mb-4">Hi! I’m the heart behind <span class="font-semibold text-pink-700">Influencer Joy</span> a digital creator on a mission to help women shine online with purpose and confidence. I love making creativity simple, fun, and profitable for everyone ready to take that leap. 💫</p>
     <p class="italic text-pink-600">"Let’s glow, grow, and influence with joy!"</p>
   </div>
