--- a/toolkit.html
+++ b/toolkit.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png">
 
-  <!-- Brevo’s own font declarations (needed by their script) -->
+  <!-- Brevo Fonts & Styles -->
   <style>
     @font-face{font-display:block;font-family:Roboto;src:url(https://assets.brevo.com/font/Roboto/Latin/normal/normal/7529907e9eaf8ebb5220c5f9850e3811.woff2)format("woff2"),url(https://assets.brevo.com/font/Roboto/Latin/normal/normal/25c678feafdc175a70922a116c9be3e7.woff)format("woff")}
     @font-face{font-display:fallback;font-family:Roboto;font-weight:600;src:url(https://assets.brevo.com/font/Roboto/Latin/medium/normal/6e9caeeafb1f3491be3e32744bc30440.woff2)format("woff2"),url(https://assets.brevo.com/font/Roboto/Latin/medium/normal/71501f0d8d5aa95960f6475d5487d4c2.woff)format("woff")}
@@ -21,43 +21,31 @@
   </style>
   <link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css">
 
-  <!-- Your visual styling -->
+  <!-- Your Visual Styling -->
   <style>
     :root{--bg:#1B1F2B;--panel:#302525;--accent:#0E77FF;--text:#ffffff;--light:#d0d3db}
     *{box-sizing:border-box;margin:0;padding:0;font-family:'Poppins',Arial,sans-serif}
     body{display:flex;flex-direction:column;min-height:100vh;background:var(--bg);color:var(--text)}
-
     header{max-width:1180px;width:100%;margin:0 auto;padding:20px 24px;display:flex;justify-content:space-between;align-items:center}
     header img{height:46px}
     nav a{color:var(--accent);font-size:.95rem;text-decoration:none}
-
     .hero{position:relative;text-align:center;padding:60px 20px 80px;background:url('https://raw.githubusercontent.com/Freelankarx/Freelankarx/4da80bfdb1c15c8d8858e436a00f85d98c074cad/Ai-toolkit-banner.png') center/cover no-repeat}
     .hero::before{content:'';position:absolute;inset:0;background:rgba(0,0,0,.8)}
     .hero>*{position:relative;z-index:1}
     .hero h1{font-size:2.8rem;font-weight:600;line-height:1.2;margin-bottom:16px}
     .hero p.sub{font-size:1.2rem;max-width:620px;margin:0 auto 32px;color:var(--light)}
-
     .form-panel{margin:0 auto;background:var(--panel);max-width:480px;padding:30px;border-radius:12px;box-shadow:0 6px 24px rgba(0,0,0,.4)}
-
-    /* ---------- Brevo override for visibility ---------- */
-    #sib-container input,
-    #sib-container textarea{background:#fff!important;color:#000!important;font-size:16px;border-radius:6px!important;border:none;padding:12px;width:100%}
-    #sib-container input::placeholder,
-    #sib-container textarea::placeholder{color:#555!important;opacity:1!important}
+    #sib-container input,#sib-container textarea{background:#fff!important;color:#000!important;font-size:16px;border-radius:6px!important;border:none;padding:12px;width:100%}
+    #sib-container input::placeholder,#sib-container textarea::placeholder{color:#555!important;opacity:1!important}
     #sib-container input:focus,#sib-container textarea:focus{outline:none;border:2px solid var(--accent)!important}
-
     #sib-container button{display:block;width:100%;padding:12px;background:var(--accent);color:#fff;font-weight:600;font-size:16px;border:none;border-radius:18px;cursor:pointer;transition:.3s}
     #sib-container button:hover{background:#065fd0}
-
     .spam-note{font-size:.9rem;color:var(--light);margin-top:14px}
     .privacy-note{font-size:.8rem;color:#9b9ea6;margin-top:6px}
-
     .testimonial-box{display:flex;flex-direction:column;gap:28px;margin:60px auto 0;max-width:700px}
     .testimonial{background:#22242e;border-left:4px solid var(--accent);border-radius:10px;padding:24px 28px;font-size:.95rem;color:#e4e6eb;font-style:italic}
     .stars{color:gold;font-size:1.1rem;margin-bottom:6px;display:inline-block}
-
     footer{text-align:center;padding:30px 20px;font-size:.85rem;color:#8e9099;margin-top:auto}
-
     @media(max-width:600px){
       .hero h1{font-size:1.9rem}
       .hero p.sub{font-size:1rem}
@@ -66,40 +54,26 @@
   </style>
 </head>
 <body>
-
-  <!-- Header -->
   <header>
     <a href="https://freelankarx.com"><img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png" alt="Freelankarx logo"></a>
     <nav><a href="https://freelankarx.com">← Back&nbsp;to&nbsp;Home</a></nav>
   </header>
 
-  <!-- Hero -->
   <section class="hero">
     <h1>Download the Free AI Shopify Toolkit</h1>
     <p class="sub">Get the exact tools & prompts 6-figure stores use to launch, write copy, recover carts and run smart ads — all in one click.</p>
 
-    <!-- Form panel -->
     <div class="form-panel">
-      <!-- ############ Brevo Embed ############ -->
+      <!-- Brevo Form Start -->
       <div class="sib-form" style="text-align:center;background-color:transparent;">
         <div id="sib-form-container" class="sib-form-container">
-
-          <!-- error & success panels kept -->
-          <div id="error-message" class="sib-form-message-panel" style="display:none;"></div>
-          <div id="success-message" class="sib-form-message-panel" style="display:none;"></div>
-
-          <!-- actual form -->
           <div id="sib-container" class="sib-container sib-container--vertical" style="background:transparent;max-width:540px;direction:ltr">
-            <form id="sib-form"
-                  method="POST"
-                  action="https://ecf41424.sibforms.com/serve/MUIFAHBsjQ7BfMdjnOPCRkOrpCMOFOdgj_lafJ3sSERM70_L1tNpZG3q-9iAI4qeqxXhMm26Rvs85DK65n3C6vR25wqsoGjytq7kNEzIg5FeGza31uazl_Op-mf98iZ_lhz9dNS_I6MmfV282nuKUC_BhlKSZGAg4-_0yCB396HOyEn53mk7ODi6FJQU0GFT7yvv0sume7bomX1Z"
-                  data-type="subscription"
-                  data-success-url="https://freelankarx.com/thank-you.html"><!-- ✅ CHANGE IF THANK-YOU PAGE DIFFERS -->
-
+            <form id="sib-form" method="POST"
+              action="https://ecf41424.sibforms.com/serve/MUIFAHBsjQ7BfMdjnOPCRkOrpCMOFOdgj_lafJ3sSERM70_L1tNpZG3q-9iAI4qeqxXhMm26Rvs85DK65n3C6vR25wqsoGjytq7kNEzIg5FeGza31uazl_Op-mf98iZ_lhz9dNS_I6MmfV282nuKUC_BhlKSZGAg4-_0yCB396HOyEn53mk7ODi6FJQU0GFT7yvv0sume7bomX1Z"
+              data-type="subscription"
+              data-success-url="https://freelankarx.com/thank-you.html">
               <input type="email" id="EMAIL" name="EMAIL" placeholder="Your best email" required>
               <button type="submit">Get the Toolkit →</button>
-
-              <!-- honeypot & locale -->
               <input type="text" name="email_address_check" value="" class="input--hidden">
               <input type="hidden" name="locale" value="en">
             </form>
@@ -107,13 +81,12 @@
         </div>
       </div>
       <script defer src="https://sibforms.com/forms/end-form/build/main.js"></script>
-      <!-- ########## /Brevo Embed ########## -->
+      <!-- Brevo Form End -->
 
       <div class="spam-note">📥 If our email lands in “Promotions” or “Spam,” drag it to your Primary inbox so you never miss an update.</div>
       <div class="privacy-note">We respect your privacy. Unsubscribe anytime.</div>
     </div>
 
-    <!-- Social proof -->
     <div class="testimonial-box">
       <blockquote class="testimonial"><span class="stars">⭐⭐⭐⭐⭐</span>“I set up my first profitable AI-powered store in 2 days using this toolkit. Absolute lifesaver!” — <strong>Maria G.</strong></blockquote>
       <blockquote class="testimonial"><span class="stars">⭐⭐⭐⭐⭐</span>“I thought I’d spend months learning ads… this kit literally wrote the strategy for me.” — <strong>Daniel A.</strong></blockquote>
