--- a/toolkit.html
+++ b/toolkit.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Free AI Shopify Toolkit | Freelankarx</title>
-  <meta name="description" content="Download the exact AI toolkit 6-figure Shopify brands use to launch, scale & automate with ease – free from Freelankarx.">
+  <meta name="description" content="Download the exact AI toolkit 6-figure Shopify brands use to launch, scale & automate with ease free from Freelankarx.">
 
   <!-- Brand font / favicon -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
