--- a/toolkit.html
+++ b/toolkit.html
@@ -5,47 +5,74 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Free AI Shopify Toolkit | Freelankarx</title>
-  <meta name="description" content="Download the exact AI toolkit 6-figure Shopify brands use to launch, scale & automate with ease free from Freelankarx.">
+  <meta name="description" content="Download the exact AI toolkit 6-figure Shopify brands use to launch, scale & automate with ease – free from Freelankarx.">
 
-  <!-- Brand font / favicon -->
+  <!-- Fonts & Favicon -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png">
 
-  <!-- Brevo Fonts & Styles -->
+  <!-- Styles -->
   <style>
-    @font-face{font-display:block;font-family:Roboto;src:url(https://assets.brevo.com/font/Roboto/Latin/normal/normal/7529907e9eaf8ebb5220c5f9850e3811.woff2)format("woff2"),url(https://assets.brevo.com/font/Roboto/Latin/normal/normal/25c678feafdc175a70922a116c9be3e7.woff)format("woff")}
-    @font-face{font-display:fallback;font-family:Roboto;font-weight:600;src:url(https://assets.brevo.com/font/Roboto/Latin/medium/normal/6e9caeeafb1f3491be3e32744bc30440.woff2)format("woff2"),url(https://assets.brevo.com/font/Roboto/Latin/medium/normal/71501f0d8d5aa95960f6475d5487d4c2.woff)format("woff")}
-    @font-face{font-display:fallback;font-family:Roboto;font-weight:700;src:url(https://assets.brevo.com/font/Roboto/Latin/bold/normal/3ef7cf158f310cf752d5ad08cd0e7e60.woff2)format("woff2"),url(https://assets.brevo.com/font/Roboto/Latin/bold/normal/ece3a1d82f18b60bcce0211725c476aa.woff)format("woff")}
-  </style>
-  <link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css">
-
-  <!-- Your Visual Styling -->
-  <style>
-    :root{--bg:#1B1F2B;--panel:#302525;--accent:#0E77FF;--text:#ffffff;--light:#d0d3db}
-    *{box-sizing:border-box;margin:0;padding:0;font-family:'Poppins',Arial,sans-serif}
-    body{display:flex;flex-direction:column;min-height:100vh;background:var(--bg);color:var(--text)}
-    header{max-width:1180px;width:100%;margin:0 auto;padding:20px 24px;display:flex;justify-content:space-between;align-items:center}
-    header img{height:46px}
-    nav a{color:var(--accent);font-size:.95rem;text-decoration:none}
-    .hero{position:relative;text-align:center;padding:60px 20px 80px;background:url('https://raw.githubusercontent.com/Freelankarx/Freelankarx/4da80bfdb1c15c8d8858e436a00f85d98c074cad/Ai-toolkit-banner.png') center/cover no-repeat}
-    .hero::before{content:'';position:absolute;inset:0;background:rgba(0,0,0,.8)}
-    .hero>*{position:relative;z-index:1}
-    .hero h1{font-size:2.8rem;font-weight:600;line-height:1.2;margin-bottom:16px}
-    .hero p.sub{font-size:1.2rem;max-width:620px;margin:0 auto 32px;color:var(--light)}
-    .form-panel{margin:0 auto;background:var(--panel);max-width:480px;padding:30px;border-radius:12px;box-shadow:0 6px 24px rgba(0,0,0,.4)}
-    #sib-container input,#sib-container textarea{background:#fff!important;color:#000!important;font-size:16px;border-radius:6px!important;border:none;padding:12px;width:100%}
-    #sib-container input::placeholder,#sib-container textarea::placeholder{color:#555!important;opacity:1!important}
-    #sib-container input:focus,#sib-container textarea:focus{outline:none;border:2px solid var(--accent)!important}
-    #sib-container button{display:block;width:100%;padding:12px;background:var(--accent);color:#fff;font-weight:600;font-size:16px;border:none;border-radius:18px;cursor:pointer;transition:.3s}
-    #sib-container button:hover{background:#065fd0}
-    .spam-note{font-size:.9rem;color:var(--light);margin-top:14px}
-    .privacy-note{font-size:.8rem;color:#9b9ea6;margin-top:6px}
-    .testimonial-box{display:flex;flex-direction:column;gap:28px;margin:60px auto 0;max-width:700px}
-    .testimonial{background:#22242e;border-left:4px solid var(--accent);border-radius:10px;padding:24px 28px;font-size:.95rem;color:#e4e6eb;font-style:italic}
-    .stars{color:gold;font-size:1.1rem;margin-bottom:6px;display:inline-block}
-    footer{text-align:center;padding:30px 20px;font-size:.85rem;color:#8e9099;margin-top:auto}
+    :root {
+      --bg: #1B1F2B; --panel: #302525; --accent: #0E77FF; --text: #ffffff; --light: #d0d3db;
+    }
+    * {
+      box-sizing: border-box; margin: 0; padding: 0; font-family: 'Poppins', Arial, sans-serif;
+    }
+    body {
+      display: flex; flex-direction: column; min-height: 100vh; background: var(--bg); color: var(--text);
+    }
+    header {
+      max-width: 1180px; width: 100%; margin: 0 auto; padding: 20px 24px;
+      display: flex; justify-content: space-between; align-items: center;
+    }
+    header img { height: 46px; }
+    nav a {
+      color: var(--accent); font-size: .95rem; text-decoration: none;
+    }
+    .hero {
+      position: relative; text-align: center; padding: 60px 20px 80px;
+      background: url('https://raw.githubusercontent.com/Freelankarx/Freelankarx/4da80bfdb1c15c8d8858e436a00f85d98c074cad/Ai-toolkit-banner.png') center/cover no-repeat;
+    }
+    .hero::before {
+      content: ''; position: absolute; inset: 0; background: rgba(0,0,0,.8);
+    }
+    .hero > * {
+      position: relative; z-index: 1;
+    }
+    .hero h1 {
+      font-size: 2.8rem; font-weight: 600; line-height: 1.2; margin-bottom: 16px;
+    }
+    .hero p.sub {
+      font-size: 1.2rem; max-width: 620px; margin: 0 auto 32px; color: var(--light);
+    }
+    .form-panel {
+      margin: 0 auto; background: var(--panel); max-width: 540px;
+      padding: 30px; border-radius: 12px; box-shadow: 0 6px 24px rgba(0,0,0,.4);
+    }
+    .spam-note {
+      font-size: .9rem; color: var(--light); margin-top: 14px;
+    }
+    .privacy-note {
+      font-size: .8rem; color: #9b9ea6; margin-top: 6px;
+    }
+    .testimonial-box {
+      display: flex; flex-direction: column; gap: 28px; margin: 60px auto 0; max-width: 700px;
+    }
+    .testimonial {
+      background: #22242e; border-left: 4px solid var(--accent);
+      border-radius: 10px; padding: 24px 28px; font-size: .95rem;
+      color: #e4e6eb; font-style: italic;
+    }
+    .stars {
+      color: gold; font-size: 1.1rem; margin-bottom: 6px; display: inline-block;
+    }
+    footer {
+      text-align: center; padding: 30px 20px; font-size: .85rem;
+      color: #8e9099; margin-top: auto;
+    }
     @media(max-width:600px){
       .hero h1{font-size:1.9rem}
       .hero p.sub{font-size:1rem}
@@ -55,7 +82,9 @@
 </head>
 <body>
   <header>
-    <a href="https://freelankarx.com"><img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png" alt="Freelankarx logo"></a>
+    <a href="https://freelankarx.com">
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png" alt="Freelankarx logo">
+    </a>
     <nav><a href="https://freelankarx.com">← Back&nbsp;to&nbsp;Home</a></nav>
   </header>
 
@@ -64,24 +93,11 @@
     <p class="sub">Get the exact tools & prompts 6-figure stores use to launch, write copy, recover carts and run smart ads — all in one click.</p>
 
     <div class="form-panel">
-      <!-- Brevo Form Start -->
-      <div class="sib-form" style="text-align:center;background-color:transparent;">
-        <div id="sib-form-container" class="sib-form-container">
-          <div id="sib-container" class="sib-container sib-container--vertical" style="background:transparent;max-width:540px;direction:ltr">
-            <form id="sib-form" method="POST"
-              action="https://ecf41424.sibforms.com/serve/MUIFAHBsjQ7BfMdjnOPCRkOrpCMOFOdgj_lafJ3sSERM70_L1tNpZG3q-9iAI4qeqxXhMm26Rvs85DK65n3C6vR25wqsoGjytq7kNEzIg5FeGza31uazl_Op-mf98iZ_lhz9dNS_I6MmfV282nuKUC_BhlKSZGAg4-_0yCB396HOyEn53mk7ODi6FJQU0GFT7yvv0sume7bomX1Z"
-              data-type="subscription"
-              data-success-url="https://freelankarx.com/thank-you.html">
-              <input type="email" id="EMAIL" name="EMAIL" placeholder="Your best email" required>
-              <button type="submit">Get the Toolkit →</button>
-              <input type="text" name="email_address_check" value="" class="input--hidden">
-              <input type="hidden" name="locale" value="en">
-            </form>
-          </div>
-        </div>
-      </div>
-      <script defer src="https://sibforms.com/forms/end-form/build/main.js"></script>
-      <!-- Brevo Form End -->
+      <!-- ✅ Brevo Form Embed via iframe -->
+      <iframe width="540" height="305" src="https://ecf41424.sibforms.com/serve/MUIFANxWaPccBdyRW4mMJzyeBWokr4NtbGPryAMkaLVOqCRHz88sZH2vUvClWos1dtasmxYFlk74IeAj-H4ozHDOsPRgBXgPP4uCQijh1KK9HGf4C-UQx3N35itLwOrV1cw6ViKZaWYmVBZZqdzgQ_Kgiv4xF38u43RiPJWCPaNbPW48mqmXnbOKxrDKolu-LrTelYUVWjs5-AGu"
+        frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;">
+      </iframe>
+      <!-- /iframe -->
 
       <div class="spam-note">📥 If our email lands in “Promotions” or “Spam,” drag it to your Primary inbox so you never miss an update.</div>
       <div class="privacy-note">We respect your privacy. Unsubscribe anytime.</div>
