--- a/project/Cakekulture/index.html
+++ b/project/Cakekulture/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><html lang="en"><head>
-  <meta charset="UTF-8" />
+<!DOCTYPE html><html lang="en"><head>  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cakekulture | Custom Cakes Bedford</title>
   <meta name="description" content="Cakekulture is Bedford’s luxury home bakery crafting elegant, custom cakes that captivate the eye and delight the taste buds. Each cake is made fresh to order with love and artistry. DM or WhatsApp to order your edible masterpiece today!">
@@ -18,8 +17,8 @@
     }
     body {
       font-family: 'Open Sans', sans-serif;
-      background-color: #000;
-      color: #f0f0f0;
+      background-color: #FFF8E7;
+      color: #333;
     }
     h1, h2, h3 {
       font-family: 'Playfair Display', serif;
@@ -55,7 +54,7 @@
 </head>
 <body>
   <!-- Header with Logo -->
-<header class="bg-black shadow-md fixed top-0 left-0 w-full z-50">
+<header class="bg-white shadow-md fixed top-0 left-0 w-full z-50">
   <div class="max-w-7xl mx-auto px-4 py-3 flex items-center justify-between">
     <!-- Logo with Text -->
     <div class="flex items-center space-x-3">
@@ -63,16 +62,13 @@
       <span class="text-xl font-bold text-yellow-400 tracking-wide">Cakekulture</span>
     </div>
   </div>
-</header>
-
-<!-- Hero Section -->
-<section class="h-screen bg-black flex flex-col justify-center items-center text-center px-4 mt-16">
+</header><!-- Hero Section --><section class="h-screen bg-[#FFF8E7] flex flex-col justify-center items-center text-center px-4 mt-16">
   <h1 class="text-4xl md:text-6xl mb-4 text-yellow-400">Cakes Made to Impress<br>Moments Made to Remember</h1>
-  <p class="text-lg md:text-2xl text-gray-300 mb-8">Crafted in Bedford with love, artistry, and flavors that leave a lasting memory.</p>
+  <p class="text-lg md:text-2xl text-[#555] mb-8">Crafted in Bedford with love, artistry, and flavors that leave a lasting memory.</p>
   <a href="#contact" class="bg-gradient-to-r from-yellow-400 to-orange-400 hover:from-orange-500 hover:to-yellow-500 text-black font-semibold py-3 px-6 rounded-full shadow-lg transition transform hover:scale-105">Order Your Cake</a>
 </section>
   <!-- About Section -->
-  <section class="py-16 px-6 text-center bg-[#111]">
+  <section class="py-16 px-6 text-center bg-[#FFFAF0]">
     <div class="max-w-3xl mx-auto fade-in">
       <h2 class="text-3xl mb-4">Welcome to Cakekulture</h2>
       <p class="mb-4">Cakekulture is more than a bakery it's where dreams turn into edible art. Based in Bedford, we create custom cakes for birthdays, weddings, and life's special moments. Our passion is creating unforgettable experiences through cakes that wow visually and taste incredible.</p>
@@ -81,7 +77,7 @@
     </div>
   </section>
   <!-- Story Section -->
-  <section class="py-16 px-6 bg-black text-center">
+  <section class="py-16 px-6 bg-[#FFF8E7] text-center">
     <h2 class="text-3xl mb-6">Meet Adenike Your Baker</h2>
     <div class="max-w-3xl mx-auto fade-in">
       <p class="mb-4">Hi, I'm Adenike, founder of Cakekulture. My journey began with a love for baking and a passion for celebrating people. Every cake I create is personal made with care, creativity, and the desire to make your occasion shine. When you order from Cakekulture, you're not just buying a cake; you're investing in a beautiful memory.</p>
@@ -89,7 +85,7 @@
     </div>
   </section>
   <!-- Gallery Section -->
-  <section class="py-16 bg-[#111] text-center gallery">
+  <section class="py-16 bg-[#FFFAF0] text-center gallery">
     <h2 class="text-3xl mb-10">Our Cake Creations</h2>
     <div class="flex flex-wrap justify-center gap-6">
       <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0015.jpg" alt="Cake 1" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />
@@ -99,21 +95,21 @@
     </div>
   </section>
   <!-- Testimonials Section -->
-  <section class="py-16 px-6 bg-black text-center">
+  <section class="py-16 px-6 bg-[#FFF8E7] text-center">
     <h2 class="text-3xl mb-10">What Our Clients Say</h2>
     <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
-      <div class="bg-[#111] p-6 rounded-lg shadow fade-in">
+      <div class="bg-[#FFFAF0] p-6 rounded-lg shadow fade-in">
         <p class="italic">⭐ ⭐ ⭐ ⭐ ⭐ “Adenike created the most beautiful cake for my baby shower it tasted divine and was the centerpiece of our day!”</p>
         <p class="mt-4 font-semibold">— Emily R.</p>
       </div>
-      <div class="bg-[#111] p-6 rounded-lg shadow fade-in">
+      <div class="bg-[#FFFAF0] p-6 rounded-lg shadow fade-in">
         <p class="italic">⭐ ⭐ ⭐ ⭐ ⭐ “Cakekulture never disappoints. Every order feels special, like she knows exactly what you need.”</p>
         <p class="mt-4 font-semibold">— Mark T.</p>
       </div>
     </div>
   </section>
   <!-- Why Choose Cakekulture -->
-  <section class="py-16 px-6 bg-[#111] text-center">
+  <section class="py-16 px-6 bg-[#FFFAF0] text-center">
     <h2 class="text-3xl mb-6">Why People Love Cakekulture</h2>
     <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-6">
       <div class="p-4 fade-in">
@@ -131,9 +127,9 @@
     </div>
   </section>
   <!-- Contact Section -->
-  <section id="contact" class="py-16 bg-black text-center px-6">
+  <section id="contact" class="py-16 bg-[#FFF8E7] text-center px-6">
     <h2 class="text-3xl mb-6">Let's Create Something Sweet</h2>
-    <div class="max-w-xl mx-auto bg-[#111] p-8 rounded-lg shadow-md fade-in">
+    <div class="max-w-xl mx-auto bg-[#FFFAF0] p-8 rounded-lg shadow-md fade-in">
       <p class="mb-4 text-lg">Ready to order your custom cake? Let's talk details and make your vision a reality.</p>
       <a href="https://wa.me/447466465349" class="bg-gradient-to-r from-yellow-400 to-orange-400 hover:from-orange-500 hover:to-yellow-500 text-black font-semibold py-3 px-6 rounded-full shadow transition transform hover:scale-105" target="_blank">Message Adenike on WhatsApp</a>
     </div>
@@ -146,7 +142,7 @@
     </svg>
   </a>
   <!-- Footer -->
-  <footer class="py-6 bg-black text-center text-sm text-gray-400">
+  <footer class="py-6 bg-white text-center text-sm text-[#666]">
     <p>&copy; 2025 Cakekulture. All rights reserved. Website by <a href="https://freelankarx.com" class="text-yellow-400 font-semibold hover:underline">Freelankarx</a>.</p>
   </footer>
   <script>
