--- a/tifsy-wears/index.html
+++ b/tifsy-wears/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tifsy Wears | Bespoke & Ready-Made Fashion by Adenike</title>
-  <meta name="description" content="Tifsy Wears by Adenike — bespoke tailoring and ready-made outfits that fit, flatter, and empower. Thoughtful design, soft movement, luxury feel. Message on WhatsApp to start your look." />
+  <meta name="description" content="Tifsy Wears by Adenike bespoke tailoring and ready-made outfits that fit, flatter, and empower. Thoughtful design, soft movement, luxury feel. Message on WhatsApp to start your look." />
   <meta name="keywords" content="Tifsy Wears, Adenike, fashion designer, bespoke, ready made, custom dress, tailoring, alterations, Nigeria" />
   <link rel="canonical" href="https://example.com/" />
 
@@ -88,7 +88,7 @@
     <div class="relative z-10 max-w-3xl px-6 text-white">
       <p class="uppercase tracking-[0.35em] text-xs md:text-sm mb-4 text-white/80">Bespoke • Ready-Made • Alterations</p>
       <h1 class="text-4xl md:text-6xl leading-tight font-semibold">Designs that fit, flatter & <span class="text-[var(--gold)]">feel like you</span></h1>
-      <p class="mt-5 text-base md:text-lg text-white/90">Adenike crafts outfits that honor your shape and story—so you walk in with quiet confidence.</p>
+      <p class="mt-5 text-base md:text-lg text-white/90">Adenike crafts outfits that honor your shape and story so you walk in with quiet confidence.</p>
       <div class="mt-8 flex flex-col sm:flex-row items-center justify-center gap-3">
         <a href="https://wa.me/2348147545019" target="_blank" class="btn-gold">Start your outfit</a>
         <a href="#gallery" class="rounded-full px-6 py-3 border border-white/40 hover:bg-white/10">See recent work</a>
@@ -102,7 +102,7 @@
       <img src="https://images.unsplash.com/photo-1503342394125-480259ab4c9b?q=80&w=900&auto=format&fit=crop"
            alt="Tailor at work" class="img-soft ratio-3x4 w-full" loading="lazy">
       <div class="reveal">
-        <h2 class="text-3xl md:text-4xl text-gray-900">Hi, I’m <span class="text-[var(--gold)]">Adenike</span> — your designer</h2>
+        <h2 class="text-3xl md:text-4xl text-gray-900">Hi, I’m <span class="text-[var(--gold)]">Adenike</span> your designer</h2>
         <div class="rule my-5"></div>
         <p class="text-gray-700 leading-relaxed">
           Fashion is personal. I listen to your vision, study your fit, and shape pieces that carry your confidence.
@@ -199,7 +199,7 @@
 
     <div class="grid md:grid-cols-2 gap-6 mt-10">
       <div class="reveal bg-white rounded-2xl p-6 shadow-sm">
-        <p class="italic">“Adenike listened like a friend. The dress fit like a dream and I felt beautiful—simple.”</p>
+        <p class="italic">“Adenike listened like a friend. The dress fit like a dream and I felt beautiful simple.”</p>
         <p class="mt-4 font-semibold">— Funmi A.</p>
       </div>
       <div class="reveal bg-white rounded-2xl p-6 shadow-sm">
