--- a/tifsy-wears/index.html
+++ b/tifsy-wears/index.html
@@ -7,7 +7,7 @@
   <title>Tifsy Wears | Bespoke & Ready-Made Fashion by Adenike</title>
   <meta name="description" content="Tifsy Wears by Adenike bespoke tailoring and ready-made outfits that fit, flatter, and empower. Thoughtful design, soft movement, luxury feel. Message on WhatsApp to start your look." />
   <meta name="keywords" content="Tifsy Wears, Adenike, fashion designer, bespoke, ready made, custom dress, tailoring, alterations, Nigeria" />
-  <link rel="canonical" href="https://example.com/" />
+  <link rel="canonical" href="https://freelankarx.com/tifsy-wears" />
 
   <!-- Social Cards -->
   <meta property="og:title" content="Tifsy Wears | Bespoke & Ready-Made Fashion by Adenike">
